--- a/CloudPan/src/main/resources/application.yml
+++ b/CloudPan/src/main/resources/application.yml
@@ -20,9 +20,8 @@ spring:
     username: root
     password: 123456
   redis:
-    host: 123.249.23.88
+    host: localhost
     port: 6379
-    password: c219034
 #开启swagger配置
 swagger:
   open: true
