--- a/CloudPan/pom.xml
+++ b/CloudPan/pom.xml
@@ -21,6 +21,12 @@
     </properties>
 
     <dependencies>
+
+        <!--邮件发送-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
