简易网盘前端-更新文件秒传,分片上传等功能功能，优化响应

--- a/CloudPan/src/main/resources/application.yml
+++ b/CloudPan/src/main/resources/application.yml
@@ -20,13 +20,13 @@ spring:
     username: root
     password: 123456
   redis:
-    host:
+    host: xxx
     port: 6379
   mail:
     host: smtp.qq.com
     port: 465
-    username: xxxxx
-    password: xxxx
+    username: xxx
+    password: xxx
     default-encoding: UTF-8
     properties:
       mail:
